syntax = "proto3";

package post;

option go_package = "social-network/common/proto/post";

import "google/protobuf/timestamp.proto";

service PostService {
  rpc CreatePost(CreatePostRequest) returns (PostResponse);
  rpc GetPost(GetPostRequest) returns (PostResponse);
  rpc UpdatePost(UpdatePostRequest) returns (PostResponse);
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
  rpc ListPosts(ListPostsRequest) returns (ListPostsResponse);
}

message Post {
  uint64 id = 1;
  string title = 2;
  string description = 3;
  uint64 creator_id = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  bool is_private = 7;
  repeated string tags = 8;
}

message CreatePostRequest {
  string title = 1;
  string description = 2;
  uint64 creator_id = 3;
  bool is_private = 4;
  repeated string tags = 5;
}

message GetPostRequest {
  uint64 id = 1;
  uint64 requester_id = 2; // For checking privacy permissions
}

message UpdatePostRequest {
  uint64 id = 1;
  string title = 2;
  string description = 3;
  uint64 creator_id = 4; // User requesting the update
  bool is_private = 5;
  repeated string tags = 6;
}

message DeletePostRequest {
  uint64 id = 1;
  uint64 creator_id = 2; // User requesting the deletion
}

message DeletePostResponse {
  bool success = 1;
}

message ListPostsRequest {
  int32 page = 1;
  int32 page_size = 2;
  uint64 requester_id = 3; // For filtering private posts
}

message ListPostsResponse {
  repeated Post posts = 1;
  int32 total_count = 2;
}

message PostResponse {
  Post post = 1;
} 